Bubble layout: Fix misaligned read receipts

--- a/res/css/views/rooms/_BubbleLayout.pcss
+++ b/res/css/views/rooms/_BubbleLayout.pcss
@@ -198,7 +198,7 @@ $left-gutter: 5.4rem;
     }    
 
     .mx_ReadReceiptGroup {
-        position: unset;
+        position: unset !important;
 
         .mx_ReadReceiptGroup_button {
             flex-direction: row-reverse;
